# face-spoofing-detector-backend

./: .env.example  .gitignore  README.md  kill_port.bat  kill_port.sh  lifespan.py  main.py  pyproject.toml  router.py
controller/: __init__.py  activation_controller.py  auth_controller.py  config_controller.py  health_controller.py  history_controller.py  infer_controller.py  metrics_controller.py  storage_controller.py
db/: __init__.py  models.py
inferencer/: __init__.py  base_inferencer.py  debug_inferencer.py  fusion_model_inferencer.py  inferencer_factory.py  single_model_inferencer.py
middleware/: __init__.py  auth_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limiter.py
schemas/: __init__.py  activation.py  auth.py  config.py  detection.py  history.py  storage.py
scripts/: README.md  setup_env_linux.sh  setup_env_macos.sh  setup_env_windows.bat
service/: config_service.py  history_service.py  image_auto_save_service.py  infer_service.py  progress_service.py  task_scheduler.py
tests/: README.md  create_act.py  test_activation.py  test_auth.py  test_config_hotreload.py  test_health_check.py  test_history.py  test_history_debug.py  test_infer.py  test_prometheus.py  test_storage.py  test_task_management.py  test_task_scheduler.py  test_websocket_client.py
util/: audit.py  auth.py  batch_result_builder.py  config.py  image_compressor.py  image_storage_policy.py  logger.py  result_parser.py  storage.py  websocket_manager.py
util/model/: __init__.py  mobilenet.py
